# engine

./: .gitignore  Cargo.toml  README.md  deny.toml  engine.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  reproducible-build.yml
crates/engine-ai/: Cargo.toml
crates/engine-api/: Cargo.toml
crates/engine-asset/: Cargo.toml
crates/engine-audio/: Cargo.toml
crates/engine-config/: Cargo.toml
crates/engine-config/src/: lib.rs
crates/engine-core/: Cargo.toml
crates/engine-core/benches/: alloc.rs  collections.rs  million_entities.rs
crates/engine-core/src/: alloc.rs  collections.rs  lib.rs  rng.rs  telemetry.rs
crates/engine-core/src/ecs/: archetype.rs  entity.rs  mod.rs  query.rs  schedule.rs  storage.rs  type_id.rs  world.rs
crates/engine-core/tests/: archetype.rs  collections_golden.txt  collections_parity.rs  determinism.rs  ecs.rs  golden-core.txt  replay_parity.rs
crates/engine-ecs-macro/: Cargo.toml
crates/engine-ecs-macro/src/: lib.rs
crates/engine-editor/: Cargo.toml
crates/engine-gpu/: Cargo.toml
crates/engine-gpu/src/: bindless.rs  buffer.rs  device.rs  encoder.rs  error.rs  lib.rs  pipeline.rs  runtime.rs  sampler.rs  swapchain.rs  texture.rs
crates/engine-gpu/tests/: compute_roundtrip.rs  texture_readback.rs
crates/engine-hub-core/: Cargo.toml
crates/engine-i18n/: Cargo.toml
crates/engine-math/: Cargo.toml
crates/engine-math/src/: fixed.rs  lib.rs  mat.rs  quat.rs  scalar.rs  simd.rs  transcendental.rs  vec.rs  vec_scalar_reference.rs
crates/engine-math/tests/: determinism.rs  golden-math.txt  simd_parity.rs
crates/engine-net/: Cargo.toml
crates/engine-physics/: Cargo.toml
crates/engine-platform/: Cargo.toml
crates/engine-platform/benches/: jobs.rs
crates/engine-platform/src/: fs.rs  input.rs  jobs.rs  lib.rs  mmap.rs  sampler.rs  sysinfo.rs  thread_pool.rs  time.rs  watch.rs
crates/engine-platform/src/fiber/: aarch64.rs  fallback.rs  mod.rs  x86_64.rs
crates/engine-platform/tests/: jobs_oracle.rs
crates/engine-plugin-api/: Cargo.toml
crates/engine-reflect/: Cargo.toml
crates/engine-reflect/src/: lib.rs  reflect.rs  registry.rs  value.rs
crates/engine-reflect/tests/: derive.rs
crates/engine-render/: Cargo.toml
crates/engine-render/shaders/: bilinear_upscale.wgsl  bloom.wgsl  brdf_lut_bake.wgsl  cluster_assign.wgsl  csm_shadow.wgsl  cull.wgsl  fsr_easu.wgsl  gbuffer.wgsl  ibl_evaluate.wgsl  lighting.wgsl  splat_composite.wgsl  splat_sort.wgsl  ssao.wgsl  taa_resolve.wgsl  tonemap.wgsl
crates/engine-render/src/: contracts.rs  init.rs  lib.rs  passes.rs  render_graph.rs  resources.rs  shader.rs  shaders.rs  upscale.rs  upscaler_config.rs
crates/engine-render/src/render_graph/: mod.rs  views.rs
crates/engine-render/tests/: init_smoke.rs  pass_record_discipline.rs  pass_record_e2e.rs  pipeline_smoke.rs  pixel_parity.rs  render_graph_topo.rs  upscale_dispatch.rs  upscale_selection.rs
crates/engine-render/tests/pixel_parity/: cluster_64_lights.rs  common.rs  csm_4_cascade.rs  cube.rs  harness.rs  ibl_probe.rs  post_fx_chain.rs  taa_motion.rs
crates/engine-script/: Cargo.toml
crates/engine-script/src/: asset.rs  ast.rs  breakpoints_toml.rs  bytecode.rs  codegen.rs  consteval.rs  debug.rs  debug_proto.rs  diag.rs  ext.rs  ffi.rs  ir.rs  lex.rs  lib.rs  parse.rs  reload.rs  repl.rs  resolve.rs  source.rs  typeck.rs  verify.rs  watch_expr.rs
crates/engine-script/src/gc/: barrier.rs  mod.rs  nursery.rs  old_gen.rs  remembered.rs
crates/engine-script/src/vm/: dispatch.rs  frame.rs  mod.rs  value.rs
crates/engine-script/tests/: aggregate_ops_codegen.rs  aggregate_ops_oracle.rs  breakpoint_persistence.rs  codegen_no_trap.rs  compile_parity.rs  debug_protocol.rs  ffi.rs  gc_oracle.rs  gc_pause_oracle.rs  hot_reload.rs  ir.rs  parser.rs  typeck.rs  verifier.rs  vm_oracle.rs  watch_expr_safety.rs
crates/engine-script/tests/common/: mod.rs
crates/engine-script/tests/goldens/: sli-compile.golden  sli-vm.golden
crates/engine-splatting/: Cargo.toml
crates/engine-splatting/src/: asset.rs  cloud.rs  composite.rs  contracts.rs  gltf_ext.rs  lib.rs  sort.rs
crates/engine-telemetry/: Cargo.toml
crates/engine-ui/: Cargo.toml
crates/engine-upscale-vendor/: Cargo.toml
crates/engine-upscale-vendor/src/: dlss.rs  fsr.rs  lib.rs  ort_temporal.rs  xess.rs
docs/adr/: 0000-template.md  001-rust-as-the-implementation-language.md  002-hybrid-ecs-storage.md  003-slang-as-the-authoring-shader-language.md  004-two-track-rendering-pipeline.md  005-vendor-upscaler-first-owned-fallback.md  006-wgsl-and-webtransport-for-the-web-target.md  007-owned-scripting-vm.md  009-two-netcode-modes.md  (+78 more)
testbed/engine-raster/: Cargo.toml
testbed/engine-raster/src/: cluster.rs  framebuffer.rs  ibl.rs  lib.rs  oracle.rs  post_fx.rs  rasterize.rs  sample.rs  scene.rs  shading.rs  shadow.rs  upscale.rs
testbed/engine-raster/tests/: cluster_assignment_oracle.rs  cluster_grid_geometry.rs  cluster_pixel_parity.rs  csm_atlas_layout.rs  csm_atlas_pixel_parity.rs  ibl_sh_convolution.rs  post_fx_pipeline.rs  raster_oracle.rs  rendering_contracts.rs  taa_jitter_determinism.rs  upscale_oracle.rs
tools/cache-observatory/: Cargo.toml  README.md
tools/cache-observatory/src/: main.rs  perf.rs  report.rs  timer.rs  workloads.rs
tools/engine-shader/: Cargo.toml
tools/engine-shader/src/: artifact.rs  lib.rs  main.rs  slangc.rs  target.rs
tools/engine-shader/tests/: bundle_codec.rs  reproducibility.rs  slangc_smoke.rs  target_enum.rs
tools/engine-shader/tests/fixtures/: triangle.slang
tools/engine-shader/tests/goldens/: triangle-reproducibility.golden
tools/sampling-profiler/: Cargo.toml
tools/sampling-profiler/src/: main.rs
tools/upscaler-vendor-sdks/fsr/fsr4-sys/: Cargo.toml
tools/upscaler-vendor-sdks/fsr/fsr4-sys/src/: lib.rs
tools/upscaler-vendor-sdks/streamline/streamline-sys/: Cargo.toml
tools/upscaler-vendor-sdks/streamline/streamline-sys/src/: lib.rs
tools/upscaler-vendor-sdks/xess/xess2-sys/: Cargo.toml
tools/upscaler-vendor-sdks/xess/xess2-sys/src/: lib.rs
(+98 files in other folders)
