# [ENGINE] platform — workspace root
# See ENGINE_SPECIFICATION_v2.0.md Part IV.1

[workspace]
resolver = "3"
members = [
    "bin/engine-debug",
    "bin/engine-repl",
    "crates/*",
    "testbed/engine-raster",
    "tools/cache-observatory",
    "tools/engine-shader",
    "tools/sampling-profiler",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95"

[workspace.dependencies]
# --- engine crates (path deps; levels 0-4 per Part IV.1) ---
engine-math = { path = "crates/engine-math" }
engine-platform = { path = "crates/engine-platform" }
engine-reflect = { path = "crates/engine-reflect" }
engine-ecs-macro = { path = "crates/engine-ecs-macro" }
engine-core = { path = "crates/engine-core" }
engine-asset = { path = "crates/engine-asset" }
engine-telemetry = { path = "crates/engine-telemetry" }
engine-i18n = { path = "crates/engine-i18n" }
engine-render = { path = "crates/engine-render" }
engine-physics = { path = "crates/engine-physics" }
engine-audio = { path = "crates/engine-audio" }
engine-net = { path = "crates/engine-net" }
engine-script = { path = "crates/engine-script" }
engine-ai = { path = "crates/engine-ai" }
engine-editor = { path = "crates/engine-editor" }
engine-hub-core = { path = "crates/engine-hub-core" }
engine-ui = { path = "crates/engine-ui" }
engine-api = { path = "crates/engine-api" }
engine-plugin-api = { path = "crates/engine-plugin-api" }

# --- third-party deps are added here as phases require them ---

# Benchmarking. Dev-only — no engine code links to it (Phase 1, ADR-026).
criterion = { version = "0.5", default-features = false }

# BLAKE3 — already a build-time hash for cross-arch goldens elsewhere
# (engine-math determinism, sampling-profiler stack ids). Promoted to a
# workspace dep in Phase 4 so the sli front-end's `tests/compile_parity.rs`
# golden can take a digest over its compiled corpus without each crate
# pinning its own version (ADR-034).
blake3 = { version = "1", default-features = false }

# Workspace-wide lints. The foundation crates opt in via `[lints] workspace =
# true`; documentation is a deliverable (spec XX.6), so undocumented public
# items fail the build.
[workspace.lints.rust]
missing_docs = "deny"

# Determinism Contract (ADR-013): the simulation path is built with the
# `sim` profile. The no-FMA codegen flag is applied via the build invocation
# (RUSTFLAGS="-C target-feature=-fma") until the sim crates are split out.
[profile.sim]
inherits = "release"
