[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
engine-ecs-macro = { workspace = true }
blake3 = "1"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "alloc"
harness = false

[[bench]]
name = "collections"
harness = false

[lints]
workspace = true
