[package]
name = "engine-splatting"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

description = """
3D Gaussian Splatting rendering: SplatCloud SoA storage, parallel
radix sort (CPU + GPU), ESPL asset format, glTF KHR_gaussian_splatting
reader, and the composite render-graph pass. See ADR-077 and ADR-078.
"""

[dependencies]
engine-math = { workspace = true }
engine-platform = { workspace = true }
engine-asset = { workspace = true }
blake3 = { workspace = true, default-features = false }

[lints]
workspace = true
